[package]
name = "redis-over-http-async"
version = "0.1.0"
authors = ["Geoffrey Brunet"]
edition = "2021"

[dependencies]
actix-web = "3.3.2"
mobc = "0.7"
mobc-redis = { version = "0.7", default-features = false, features = ["async-std-comp"] }
redis = "0.21.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
